--- a/src/app/auth/signup/signup.component.scss
+++ b/src/app/auth/signup/signup.component.scss
@@ -10,6 +10,9 @@
         border-radius: 10px;
         padding: 15px;
         box-shadow: -1px 3px 19px -3px #7c0caf;
+        mat-form-field {
+            width: 75%;
+        }
         .submit {
             margin-top: 20px;
             width: 40%;
