--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,12 @@
-<p>
-  login works!
-</p>
+<section class="login-form auth-form-page">
+  <form action="" class="main-form" (ngSubmit)="onSubmit()">
+    <mat-form-field>
+      <input type="text" matInput [formControl]="formEmailControl" placeholder="Enter your email">
+    </mat-form-field>
+    <mat-form-field>
+        <input type="password" matInput [formControl]="formPasswordControl" placeholder="Enter your password">
+      </mat-form-field>
+      <button class="submit" class="submit" mat-raised-button color="primary">Login</button>
+    <a routerLink="/signup">Or signup</a>
+  </form>
+</section>
