--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,34 @@
-<h1>Welcome to fit-app!</h1>
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+    <mat-sidenav opened="true" #sideNav role="navigation">
+        Sidenav
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <mat-toolbar color="primary">
+            <div>
+                <button (click)="sideNav.toggle()" mat-stroked-button>
+                        <mat-icon>reorder</mat-icon>
+                </button>
+            </div>
+            <div>Logo</div>
+            <div class="tabs">
+                <ul>
+                    <li>
+                        <a routerLink="/login">Login</a>
+                    </li>
+                    <li>
+                        <a routerLink="/signup">Signup</a>
+                    </li>
+                    <li>
+                        <a routerLink="/training">Trainig</a>
+                    </li>
+                    <li>
+                        <a routerLink="/welcome">welcome</a>
+                    </li>
+                </ul>
+            </div>
+        </mat-toolbar>
+        <main>
+                <router-outlet></router-outlet>
+        </main>
+    </mat-sidenav-content>
+</mat-sidenav-container>
