--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,12 @@
 <mat-sidenav-container>
-    <mat-sidenav opened="true" #sideNav role="navigation">
-        Sidenav
+    <mat-sidenav opened="false" #sideNav role="navigation">
+        <mat-nav-list>
+            <app-sidenav (closeEvent)="sideNav.close()"></app-sidenav>
+        </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
         <mat-toolbar color="primary">
-            <div>
-                <button (click)="sideNav.toggle()" mat-stroked-button>
-                        <mat-icon>reorder</mat-icon>
-                </button>
-            </div>
-            <div>Logo</div>
-            <div class="tabs">
-                <ul>
-                    <li>
-                        <a routerLink="/login">Login</a>
-                    </li>
-                    <li>
-                        <a routerLink="/signup">Signup</a>
-                    </li>
-                    <li>
-                        <a routerLink="/training">Trainig</a>
-                    </li>
-                    <li>
-                        <a routerLink="/welcome">welcome</a>
-                    </li>
-                </ul>
-            </div>
+            <app-header (toggleEvent)="sideNav.toggle()"></app-header>
         </mat-toolbar>
         <main>
                 <router-outlet></router-outlet>
