--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,12 +8,16 @@ h1 {
     height: 100vh;
     @include gradient-violet;
 }
-.mat-toolbar {
+.mat-toolbar, app-header {
     margin-bottom: 20px;
-    ul {
-        display: flex;
-        li {
-            margin-right: 20px;
-        }
-    }
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+}
+app-header {
+    margin-bottom: 0;
+    width: 100%;
+}
+.mat-sidenav {
+    width: 250px;
 }
