--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,4 +1,16 @@
-<h1>Welcome to fit-app!</h1>
-<button mat-stroked-button>
-  <mat-icon>home</mat-icon>
-</button>
+<div class="container">
+  <div class="row">
+      <section class="col-lg">
+        <h2>ACTIVITY</h2>
+        <p>Stay active and enjoy better health and more fun!</p>
+      </section>
+      <section class="col-lg">
+        <h2>COMUNITY</h2>
+        <p>Get to know other people who share your passion!</p>
+      </section>
+      <section class="col-lg">
+        <h2>CHALLENGES</h2>
+        <p>Never stop! Dive into new challenges every day</p>
+      </section> 
+  </div>
+</div>
