--- a/src/app/training/training/training.component.html
+++ b/src/app/training/training/training.component.html
@@ -1,3 +1,8 @@
-<p>
-  training works!
-</p>
+<mat-tab-group>
+  <mat-tab label="New exercises">
+    <app-new-training></app-new-training>
+  </mat-tab>
+  <mat-tab label="Past exercises">
+      <app-past-trainings></app-past-trainings>
+    </mat-tab>
+</mat-tab-group>
