--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,3 +1,13 @@
-<p>
-  new-training works!
-</p>
+<div class="container">
+  <div class="row d-flex justify-content-center">
+    <mat-card class="col-md col-lg-4">
+      <mat-card-title>Let start workout!</mat-card-title>
+      <mat-card-content>
+        Select type of training
+      </mat-card-content>
+      <mat-card-actions class="d-flex justify-content-center">
+        <button type="submit" mat-button>Start</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
