progress spinner added

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -2,5 +2,5 @@
     background: #feffff;
     // background: -moz-linear-gradient(top, #feffff 0%, #d0c0d8 44%, #aa75af 100%);
     // background: -webkit-linear-gradient(top, #feffff 0%,#d0c0d8 44%,#aa75af 100%);
-    background: linear-gradient(to bottom, #feffff 0%,#d0c0d8 80%,#aa75af 100%);
+    background: linear-gradient(to bottom, #feffff 0%,#d0c0d8 80%,#aa75af 100%) no-repeat;
 }
