--- a/src/app/training/current-training/current-training.component.html
+++ b/src/app/training/current-training/current-training.component.html
@@ -1,3 +1,6 @@
-<p>
-  current-training works!
-</p>
+<section class="wrapper d-flex flex-column align-items-center">
+  <mat-progress-spinner mode="determinate" [value]="progress"></mat-progress-spinner>
+  <h1>{{progress}}%</h1>
+  <p>Keep on going, you can do it!</p>
+  <button mat-raised-button color="accent">Stop</button>
+</section>
