--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,12 +1,27 @@
 <div class="container">
   <div class="row d-flex justify-content-center">
-    <mat-card class="col-md col-lg-4">
+    <mat-card class="col-md col-lg-4 d-flex align-items-center flex-column">
       <mat-card-title>Let start workout!</mat-card-title>
       <mat-card-content>
-        Select type of training
+        <mat-form-field>
+          <mat-select placeholder="Select new training">
+            <mat-option value="crunches">
+                Crunches
+            </mat-option>
+            <mat-option value="touch-toes">
+                Touch toes
+            </mat-option>
+            <mat-option value="side-lunges">
+                Side lunges
+            </mat-option>
+            <mat-option value="burpees">
+                Burpees
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
       </mat-card-content>
       <mat-card-actions class="d-flex justify-content-center">
-        <button type="submit" mat-button>Start</button>
+        <button type="submit" color="primary" mat-flat-button (click)="addTraining()">Start</button>
       </mat-card-actions>
     </mat-card>
   </div>
