--- a/src/app/navigation/sidenav/sidenav.component.html
+++ b/src/app/navigation/sidenav/sidenav.component.html
@@ -1,13 +1,16 @@
-<a mat-list-item 
-*ngFor="let list of navLists"
-  routerLink="{{list.link}}"
-  routerLinkActive="active"
-  (click)="onSidenavClose()">
-    <mat-icon>{{list.icon}}</mat-icon>
-    <span class="list-name">{{list.name}}</span>
-</a>
-<mat-list-item>
-    <button mat-icon-button (click)="onSidenavClose()">
+<ng-container 
+*ngFor="let list of navLists">
+    <a mat-list-item 
+    routerLink="{{list.link}}"
+    routerLinkActive="active"
+    *ngIf="isAuth != list.anonymus"
+    (click)="onSidenavClose()">
+        <mat-icon>{{list.icon}}</mat-icon>
+        <span class="list-name">{{list.name}}</span>
+    </a>
+</ng-container>
+<mat-list-item (click)="logout();onSidenavClose()" *ngIf="isAuth">
+    <button mat-icon-button>
         <mat-icon>eject</mat-icon>
         <span class="list-name">Logout</span>
     </button>
