1. onLogout redirect, 2. RouteGuard

--- a/src/app/navigation/header/header.component.scss
+++ b/src/app/navigation/header/header.component.scss
@@ -16,6 +16,7 @@
                 color: white;
                 text-transform: uppercase;
                 text-decoration: none;
+                cursor: pointer;
                 &.active {
                     background-color: #3c4ca5;
                 }
