--- a/src/app/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/past-trainings/past-trainings.component.html
@@ -1,3 +1,31 @@
-<p>
-  past-trainings works!
-</p>
+<div>
+  <table mat-table [dataSource]="pastTrainings" class="col-lg-12">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Training </th>
+      <td mat-cell *matCellDef="let exercise"> {{exercise.name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="duration">
+      <th mat-header-cell *matHeaderCellDef> Duration </th>
+      <td mat-cell *matCellDef="let exercise"> {{exercise.duration | number}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="calories">
+      <th mat-header-cell *matHeaderCellDef> Calories </th>
+      <td mat-cell *matCellDef="let exercise"> {{exercise.calories | number}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <td mat-cell *matCellDef="let exercise"> {{exercise.date | date}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="state">
+      <th mat-header-cell *matHeaderCellDef> State </th>
+      <td mat-cell *matCellDef="let exercise"> {{exercise.state}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
+  </table>
+</div>
