--- a/src/app/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/past-trainings/past-trainings.component.html
@@ -1,27 +1,27 @@
 <div>
-  <table mat-table [dataSource]="pastTrainings" class="col-lg-12">
+  <table mat-table [dataSource]="pastTrainings" class="col-lg-12" matSort>
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Training </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Training </th>
       <td mat-cell *matCellDef="let exercise"> {{exercise.name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="duration">
-      <th mat-header-cell *matHeaderCellDef> Duration </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration </th>
       <td mat-cell *matCellDef="let exercise"> {{exercise.duration | number}} </td>
     </ng-container>
 
     <ng-container matColumnDef="calories">
-      <th mat-header-cell *matHeaderCellDef> Calories </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Calories </th>
       <td mat-cell *matCellDef="let exercise"> {{exercise.calories | number}} </td>
     </ng-container>
 
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
       <td mat-cell *matCellDef="let exercise"> {{exercise.date | date}} </td>
     </ng-container>
 
     <ng-container matColumnDef="state">
-      <th mat-header-cell *matHeaderCellDef> State </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> State </th>
       <td mat-cell *matCellDef="let exercise"> {{exercise.state}} </td>
     </ng-container>
 
