--- a/src/app/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/past-trainings/past-trainings.component.html
@@ -1,4 +1,7 @@
 <div>
+  <div class="d-flex col-4 filter-input">
+    <input matInput type="text" (keyup)='doFiltering($event.target.value)' placeholder="Filter table data">
+  </div>
   <table mat-table [dataSource]="pastTrainings" class="col-lg-12" matSort>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Training </th>
@@ -28,4 +31,6 @@
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
   </table>
+
+  <mat-paginator [pageSize]="10" [pageSizeOptions]="[1, 5, 10, 20]"></mat-paginator>
 </div>
