--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row d-flex justify-content-center">
     <mat-card class="col-md col-lg-4 d-flex align-items-center flex-column">
-      <form (ngSubmit)="addTraining(f)" #f="ngForm">
+      <form (ngSubmit)="addTraining(f)" #f="ngForm" *ngIf="!isLoading">
           <mat-card-title>Let start workout!</mat-card-title>
           <mat-card-content>
             <mat-form-field>
@@ -16,6 +16,7 @@
             <button type="submit" color="primary" mat-flat-button [disabled]="f.invalid">Start</button>
           </mat-card-actions>
       </form>
+      <mat-spinner *ngIf="isLoading"></mat-spinner>
     </mat-card>
   </div>
 </div>
