--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -13,7 +13,8 @@
             </mat-form-field>
           </mat-card-content>
           <mat-card-actions class="d-flex justify-content-center">
-            <button type="submit" color="primary" mat-flat-button [disabled]="f.invalid">Start</button>
+            <button (click)="fetchTrainings()" type="button" *ngIf="!availableTrainings" color="primary" mat-flat-button>Retry fetching trinings</button>
+            <button type="submit" *ngIf="availableTrainings" color="primary" mat-flat-button [disabled]="f.invalid">Start</button>
           </mat-card-actions>
       </form>
       <mat-spinner *ngIf="isLoading"></mat-spinner>
