--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,23 +1,23 @@
 <div class="container">
   <div class="row d-flex justify-content-center">
     <mat-card class="col-md col-lg-4 d-flex align-items-center flex-column">
-      <form (ngSubmit)="addTraining(f)" #f="ngForm" *ngIf="!isLoading">
+      <form (ngSubmit)="addTraining(f)" #f="ngForm" *ngIf="!(sLoading$ | async)">
           <mat-card-title>Let start workout!</mat-card-title>
           <mat-card-content>
             <mat-form-field>
               <mat-select placeholder="Select new training" ngModel name="exercise" required>
-                <mat-option value="crunches" *ngFor="let training of availableTrainings" [value]="training.id">
+                <mat-option value="crunches" *ngFor="let training of availableTrainings$ | async" [value]="training.id">
                     {{training.name}}
                 </mat-option>
               </mat-select>
             </mat-form-field>
           </mat-card-content>
           <mat-card-actions class="d-flex justify-content-center">
-            <button (click)="fetchTrainings()" type="button" *ngIf="!availableTrainings" color="primary" mat-flat-button>Retry fetching trinings</button>
-            <button type="submit" *ngIf="availableTrainings" color="primary" mat-flat-button [disabled]="f.invalid">Start</button>
+            <button (click)="fetchTrainings()" type="button" *ngIf="!(availableTrainings$ | async)" color="primary" mat-flat-button>Retry fetching trinings</button>
+            <button type="submit" *ngIf="availableTrainings$ | async" color="primary" mat-flat-button [disabled]="f.invalid">Start</button>
           </mat-card-actions>
       </form>
-      <mat-spinner *ngIf="isLoading"></mat-spinner>
+      <mat-spinner *ngIf="isLoading$ | async"></mat-spinner>
     </mat-card>
   </div>
 </div>
